--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -34,7 +34,7 @@ jobs:
       run: |
         chmod +x build/main
         chmod +x build/tests/compiler
-        chmod -R +w tmp
+        mkdir tmp
     - name: Test compiler
       run: build/tests/compiler
   TestSim:
@@ -52,7 +52,7 @@ jobs:
       run: |
         chmod +x build/main
         chmod +x build/tests/sim
-        chmod -R +w tmp
+        mkdir tmp
     - name: Test simulator
       run: build/tests/sim
   TestSplitter:
@@ -70,6 +70,6 @@ jobs:
       run: |
         chmod +x build/main
         chmod +x build/tests/splitter
-        chmod -R +w tmp
+        mkdir tmp
     - name: Test simulator
       run: build/tests/splitter
