Added removal of build artifacts

--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -97,3 +97,8 @@ jobs:
       run: build/tests/groups/times
     - name: Group algorithms visual test case
       run: build/tests/groups/visual
+  RemoveArtifacts:
+    - name: Remove saved build folder
+      uses: geekyeggo/delete-artifact@v2
+      with:
+        name: build-artifact-ubuntu
