Updated actions file

--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -99,7 +99,7 @@ jobs:
       run: build/tests/groups/visual
   RemoveArtifacts:
     name: Remove saved build folder
-    needs: Build TestCompiler TestSim TestSplitter TestGroups
+    needs: [Build, TestCompiler, TestSim, TestSplitter, TestGroups]
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
